# rtls-project

./: .env.example  .gitignore  AGENTS.md  FINAL_VERIFICATION_REPORT.md  Makefile  README.md  TEST_AUDIT.md  TEST_TRACEABILITY.md  VERSIONING.md  app.json  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/rtls_api/: __init__.py  admin.py  alerts.py  alerts_api.py  analytics.py  analytics_api.py  audit.py  auth.py  bootstrap_admin.py  calibration.py  calibration_engine.py  config.py  data_lifecycle.py  db.py  derived_event_queries.py  derived_events.py  exports.py  gateway_health.py  ingestion.py  ingestion_store.py  live_locations.py  main.py  models.py  observability.py  operations_overview.py  positioning.py  schemas.py  security.py  session_store.py  spatial_admin.py  storage.py  worker.py
apps/api/tests/: test_alerts.py  test_analytics.py  test_auth_flow.py  test_calibration.py  test_deep_integration_pipeline.py  test_derived_events.py  test_ingestion.py  test_live_locations.py  test_mqtt_tls.py  test_negative_paths.py  test_observability.py  test_operations_overview.py  test_premium_tier.py  test_spatial_admin.py
docs/: RTLS_IPS.docx  RTLS_IPS.md  architecture-document.md  architecture_document.md  auth-foundation.md  bootstrap-follow-on-decisions.md  deployment-and-testing-plan.md  deployment-strategy.md  directory-structure.md  django-vs-others.md  implementation-plan.md  personas-and-user-stories.md  requirements-document.md  rtls-guide.md  runbook-mobile.md  (+7 more)
(+300 files in other folders)
