[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtls-api"
version = "0.1.0"
description = "Bootstrap FastAPI service for the RTLS Analytics Platform."
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.38.0,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.12,<1.0.0",
  "pillow>=12.1.1,<13.0.0",
  "PyJWT>=2.10.1,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "redis>=7.4.0,<8.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "passlib>=1.7.4,<2.0.0",
  "paho-mqtt>=2.1.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2.post1,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pytest>=9.0.2,<10.0.0",
  "ruff>=0.11.2,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
